fix(mobile): remove overflow-x hidden on root container to finally solve iOS tap-to-top issue, and fix SYBD sticky transition broken by previous scroll context change

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        overflow-x: hidden;
     }
 }
 
@@ -62,7 +61,6 @@
         width: 100%;
         height: auto;
         min-height: 100vh;
-        overflow-x: hidden;
         position: relative;
     }
 
